# mod_bb_template

./: .gitignore  AGENT.md  README.md  build_brushes.py  build_mod.py  dummy.md  mod_config.json  pyproject.toml
buildscript/: lib.py
buildscript/python/: list_weapons.py  make_legend_enemies.py
buildscript/python/armor/: defs.py
buildscript/python/armor/templates/: BaseNamedNut.template  BaseNutInherit.template  NamedUpgradeNut.template  UpgradeNutInherit.template
buildscript/python/crop/: __init__.py
buildscript/python/helmet/: defs.py  zz_dump.py
buildscript/python/helmet/templates/: BaseNamedLayer.template  NamedLayer.template
docs/superpowers/plans/: 2026-07-17-mod-bb-template.md
docs/superpowers/specs/: 2026-07-17-dummy-pr-design.md
scripts/!mods_preload/: mod_template_loader.nut
tests/: test_build_mod.py
